--- a/application/templates/base/base.html
+++ b/application/templates/base/base.html
@@ -19,7 +19,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/vendor.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    {# article css #}
+    {% block article %}
 
+    {% endblock %}
     <!-- script
     ================================================== -->
     <script src="{{ url_for('static', filename='js/modernizr.js') }}"></script>
